Refactor code to use Java 17 language features
- Use pattern matching for instanceof (JEP 394)
- Replace Collectors.toList() with Stream.toList() (JEP 380)
- Use text blocks for multiline JSON strings (JEP 378)
- Convert ESQuery hierarchy to sealed classes (JEP 409)